# TemplInst

./: .gitignore  .project  TemplInst.cabal
src/: .gitignore  Evaluator.hs  ExprQuoter.hs  GC.hs  Grammar.y  Language.hs  Main.hs  Parser.hs  TemplInst.hs  Tokens.x  Utils.hs
test/: EvaluatorTest.hs  ParserTest.hs  Test.hs
