name: TemplInst
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
author: Koehler
data-dir: ""

executable TemplInst
    build-depends: base >=4, containers -any, pretty-show -any,
                   array -any, indents -any, parsec >=3, mtl -any, bytestring -any, template-haskell -any, syb -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Evaluator ExprQuoter GC Parser TemplInst Utils
                   Language
    ghc-options: -Wall -rtsopts -O2

test-suite Test
    build-depends: base >=4, HTF >0.9, raw-strings-qq -any
    type: exitcode-stdio-1.0
    main-is: Test.hs
    buildable: True
    hs-source-dirs: test src
    other-modules: Evaluator EvaluatorTest ParserTest
    ghc-options: -Wall -rtsopts

